@@ -1,32 +1,49 @@
 [recipe-name]
 small-hydroelectric-turbine=Standard Efficiency Turbine
 large-hydroelectric-turbine=High Efficiency Turbine
+small-hydroelectric-turbine-old=Standard Efficiency Turbine [old]
+large-hydroelectric-turbine-old=High Efficiency Turbine [old]
 high-speed-offshore-pump=High Speed Offshore pump
+large-hydroelectric-turbine-new-to-old=High Efficiency new to old
+large-hydroelectric-turbine-old-to-new=High Efficiency old to new
+small-hydroelectric-turbine-new-to-old=Standard Efficiency new to old
+small-hydroelectric-turbine-old-to-new=Standard Efficiency old to new
+
 [recipe-description]
 small-hydroelectric-turbine=A Standard Efficiency Hydroelectric turbine. Produces a low ammount of power.
 large-hydroelectric-turbine=A High Efficiency Hydroelectric turbine. Produces a higher ammount of power than the Standard Efficiency turbine.
+small-hydroelectric-turbine-old=A Standard Efficiency Hydroelectric turbine. Produces a low ammount of power.[old]
+large-hydroelectric-turbine-old=A High Efficiency Hydroelectric turbine. Produces a higher ammount of power than the Standard Efficiency turbine.[old]
 high-speed-offshore-pump=High Speed Offshore pump
+large-hydroelectric-turbine-new-to-old=Converts the new version of the High Efficiency pump to the old version
+large-hydroelectric-turbine-old-to-new=Converts the old version of the High Efficiency pump to the new version
+small-hydroelectric-turbine-new-to-old=Converts the new version of the Standard Efficiency pump to the old version
+small-hydroelectric-turbine-old-to-new=Converts the old version of the Standard Efficiency pump to the new version
 [item-name]
 small-hydroelectric-turbine=Standard Efficiency Turbine
 large-hydroelectric-turbine=High Efficiency Turbine
+small-hydroelectric-turbine-old=Standard Efficiency Turbine [old]
+large-hydroelectric-turbine-old=High Efficiency Turbine [old]
 high-speed-offshore-pump=High Speed Offshore pump
 [item-description]
 small-hydroelectric-turbine=A Standard Efficiency Hydroelectric turbine. Produces a low ammount of power.
 large-hydroelectric-turbine=A High Efficiency Hydroelectric turbine. Produces a higher ammount of power than the Standard Efficiency turbine.
+small-hydroelectric-turbine-old=A Standard Efficiency Hydroelectric turbine. Produces a low ammount of power. [old]
+large-hydroelectric-turbine-old=A High Efficiency Hydroelectric turbine. Produces a higher ammount of power than the Standard Efficiency turbine. [old]
 high-speed-offshore-pump=An offshore pump that pumps 3X the speed of the normal one.
 [entity-name]
 small-hydroelectric-turbine=Standard Efficiency Turbine
 large-hydroelectric-turbine=High Efficiency Turbine
+small-hydroelectric-turbine-old=Standard Efficiency Turbine [old]
+large-hydroelectric-turbine-old=High Efficiency Turbine [old]
 high-speed-offshore-pump=High Speed Offshore pump
 [entity-description]
 small-hydroelectric-turbine=A Standard Efficiency Hydroelectric turbine. Produces a low ammount of power.
 large-hydroelectric-turbine=A High Efficiency Hydroelectric turbine. Produces a higher ammount of power than the Standard Efficiency turbine.
+small-hydroelectric-turbine-old=A Standard Efficiency Hydroelectric turbine. Produces a low ammount of power. [old]
+large-hydroelectric-turbine-old=A High Efficiency Hydroelectric turbine. Produces a higher ammount of power than the Standard Efficiency turbine. [old]
 high-speed-offshore-pump=An offshore pump that pumps 3X the speed of the normal one.
 [technology-name]
 faster-pumps=Faster Pumps
 [technology-description]
 faster-pumps=Unlocks an offshore pump that pumps 3X the speed of the normal one.
-[mod-setting-name]
-hydro-power-use-old-power-ratios=Use the old OP ratios
-[mod-setting-description]
-hydro-power-use-old-power-ratios=Enables or disable  the old power ratios from V1.0.0
