@@ -23,6 +23,28 @@ data:extend({
     },
     {
       type = "item",
+      name = "small-hydroelectric-turbine-old",
+      icon = "__base__/graphics/icons/steam-engine.png",
+      icon_size = 64,
+     -- flags = {"goes-to-quickbar"},
+      subgroup = "energy",
+      order = "d[steam-power]-h[steam-turbine]",
+      place_result = "small-hydroelectric-turbine-old",
+      stack_size = 10
+    },
+    {
+      type = "item",
+      name = "large-hydroelectric-turbine-old",
+      icon = "__base__/graphics/icons/steam-engine.png",
+      icon_size = 64,
+     -- flags = {"goes-to-quickbar"},
+      subgroup = "energy",
+      order = "d[steam-power]-h[steam-turbine]",
+      place_result = "large-hydroelectric-turbine-old",
+      stack_size = 10
+    },
+    {
+      type = "item",
       name = "high-speed-offshore-pump",
       icon = "__base__/graphics/icons/offshore-pump.png",
       icon_size = 64, icon_mipmaps = 4,
